--- a/topologies/r2.cfg
+++ b/topologies/r2.cfg
@@ -6,3 +6,13 @@ demand = -5
 link = 1
 cost = 14
 capacity = 8
+
+[Link2]
+link = 2
+cost = 5
+capacity = 20
+
+[Link3]
+link = 4
+cost = 1
+capacity = 3
