--- a/topologies/c5.cfg
+++ b/topologies/c5.cfg
@@ -2,12 +2,12 @@
 hostname = r5
 demand = 0
 
-[Link]
+[Link1]
 link = 4
-cost = 500
-capacity = 3
+cost = 3
+capacity = 500
 
-[Link]
+[Link2]
 link = 6
-cost = 400
-capacity = 4
+cost = 4
+capacity = 400
