--- a/topologies/c6.cfg
+++ b/topologies/c6.cfg
@@ -2,12 +2,12 @@
 hostname = r6
 demand = 300
 
-[Link]
+[Link1]
 link = 5
 cost = 4
 capacity = 600
 
-[Link]
+[Link2]
 link = 6
-cost = 400
-capacity = 4
+cost = 4
+capacity = 400
